crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__snd-multiple.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          },
          {
            "name": null,
            "role": "Target_Child",
            "speaker_code": "CHI"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "sample",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;10.04",
        "corpus": "sample",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "filename": "snd-multiple",
        "media_type": "audio",
        "type": "media"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "test multi bullets",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "We'll",
                  "type": "text"
                }
              ],
              "raw_text": "We'll",
              "span": {
                "end": 222,
                "start": 217
              },
              "type": "word"
            },
            {
              "end_ms": 2200,
              "start_ms": 0,
              "type": "internal_bullet"
            },
            {
              "content": [
                {
                  "content": "hear",
                  "type": "text"
                }
              ],
              "raw_text": "hear",
              "span": {
                "end": 236,
                "start": 232
              },
              "type": "word"
            },
            {
              "end_ms": 2370,
              "start_ms": 2200,
              "type": "internal_bullet"
            },
            {
              "content": [
                {
                  "content": "argument",
                  "type": "text"
                }
              ],
              "raw_text": "argument",
              "span": {
                "end": 257,
                "start": 249
              },
              "type": "word"
            },
            {
              "end_ms": 2800,
              "start_ms": 2370,
              "type": "internal_bullet"
            },
            {
              "content": [
                {
                  "content": "now",
                  "type": "text"
                }
              ],
              "raw_text": "now",
              "span": {
                "end": 273,
                "start": 270
              },
              "type": "word"
            },
            {
              "end_ms": 2990,
              "start_ms": 2800,
              "type": "internal_bullet"
            },
            {
              "content": [
                {
                  "content": "in",
                  "type": "text"
                }
              ],
              "raw_text": "in",
              "span": {
                "end": 288,
                "start": 286
              },
              "type": "word"
            },
            {
              "end_ms": 3090,
              "start_ms": 2990,
              "type": "internal_bullet"
            },
            {
              "content": [
                {
                  "content": "number",
                  "type": "text"
                }
              ],
              "raw_text": "number",
              "span": {
                "end": 307,
                "start": 301
              },
              "type": "word"
            },
            {
              "end_ms": 3330,
              "start_ms": 3090,
              "type": "internal_bullet"
            },
            {
              "content": {
                "content": [
                  {
                    "content": [
                      {
                        "content": "oh",
                        "type": "text"
                      }
                    ],
                    "raw_text": "oh",
                    "span": {
                      "end": 323,
                      "start": 321
                    },
                    "type": "word"
                  },
                  {
                    "end_ms": 3460,
                    "start_ms": 3330,
                    "type": "internal_bullet"
                  },
                  {
                    "content": [
                      {
                        "content": "two",
                        "type": "text"
                      }
                    ],
                    "raw_text": "two",
                    "span": {
                      "end": 339,
                      "start": 336
                    },
                    "type": "word"
                  },
                  {
                    "end_ms": 3720,
                    "start_ms": 3460,
                    "type": "internal_bullet"
                  },
                  {
                    "content": [
                      {
                        "content": "ten",
                        "type": "text"
                      }
                    ],
                    "raw_text": "ten",
                    "span": {
                      "end": 355,
                      "start": 352
                    },
                    "type": "word"
                  },
                  {
                    "end_ms": 3820,
                    "start_ms": 3720,
                    "type": "internal_bullet"
                  },
                  {
                    "content": [
                      {
                        "content": "twenty-eight",
                        "type": "text"
                      }
                    ],
                    "raw_text": "twenty-eight",
                    "span": {
                      "end": 380,
                      "start": 368
                    },
                    "type": "word"
                  },
                  {
                    "end_ms": 4710,
                    "start_ms": 3820,
                    "type": "internal_bullet"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "text": "02-1028",
                  "type": "explanation"
                }
              ],
              "type": "annotated_group"
            },
            {
              "kind": "comma",
              "type": "separator"
            },
            {
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "span": {
                "end": 411,
                "start": 408
              },
              "type": "word"
            },
            {
              "end_ms": 4780,
              "start_ms": 4710,
              "type": "internal_bullet"
            },
            {
              "content": [
                {
                  "content": "Norfolk",
                  "type": "text"
                }
              ],
              "raw_text": "Norfolk",
              "span": {
                "end": 431,
                "start": 424
              },
              "type": "word"
            },
            {
              "end_ms": 5260,
              "start_ms": 4780,
              "type": "internal_bullet"
            },
            {
              "content": [
                {
                  "content": "Southern",
                  "type": "text"
                }
              ],
              "raw_text": "Southern",
              "span": {
                "end": 452,
                "start": 444
              },
              "type": "word"
            },
            {
              "end_ms": 5780,
              "start_ms": 5260,
              "type": "internal_bullet"
            },
            {
              "content": [
                {
                  "content": "Railway",
                  "type": "text"
                }
              ],
              "raw_text": "Railway",
              "span": {
                "end": 472,
                "start": 465
              },
              "type": "word"
            },
            {
              "end_ms": 6190,
              "start_ms": 5780,
              "type": "internal_bullet"
            },
            {
              "content": [
                {
                  "content": "Company",
                  "type": "text"
                }
              ],
              "raw_text": "Company",
              "span": {
                "end": 492,
                "start": 485
              },
              "type": "word"
            },
            {
              "end_ms": 7100,
              "start_ms": 6190,
              "type": "internal_bullet"
            },
            {
              "content": [
                {
                  "content": "v",
                  "type": "text"
                }
              ],
              "raw_text": "v",
              "span": {
                "end": 506,
                "start": 505
              },
              "type": "word"
            },
            {
              "end_ms": 7330,
              "start_ms": 7100,
              "type": "internal_bullet"
            },
            {
              "content": [
                {
                  "content": "James",
                  "type": "text"
                }
              ],
              "raw_text": "James",
              "span": {
                "end": 524,
                "start": 519
              },
              "type": "word"
            },
            {
              "end_ms": 7980,
              "start_ms": 7330,
              "type": "internal_bullet"
            },
            {
              "content": [
                {
                  "content": "N",
                  "type": "text"
                }
              ],
              "raw_text": "N",
              "span": {
                "end": 538,
                "start": 537
              },
              "type": "word"
            },
            {
              "end_ms": 8240,
              "start_ms": 7980,
              "type": "internal_bullet"
            },
            {
              "content": [
                {
                  "content": "Kirby",
                  "type": "text"
                }
              ],
              "raw_text": "Kirby",
              "span": {
                "end": 556,
                "start": 551
              },
              "type": "word"
            },
            {
              "end_ms": 9565,
              "start_ms": 8240,
              "type": "internal_bullet"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "label": "---",
        "type": "lazy_gem"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;10.04",
        "corpus": "sample",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Target_Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "sample",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
