crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__softer.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "geometry": "263_127_668_685_-1_-1_420_0_420_0",
        "type": "window"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "Timmy",
            "role": "Target_Child",
            "speaker_code": "CHI"
          },
          {
            "name": "Linda",
            "role": "Investigator",
            "speaker_code": "LIN"
          },
          {
            "name": "Winnie",
            "role": "Investigator",
            "speaker_code": "WIN"
          },
          {
            "name": "Gemma",
            "role": "Speaker",
            "speaker_code": "GEM"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "2;09.08",
        "corpus": "timmy",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Investigator",
        "speaker": "LIN",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Investigator",
        "speaker": "WIN",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Speaker",
        "speaker": "GEM",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "location": "TI060 (side A)",
        "type": "tape_location"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "29-FEB-1996",
        "type": "date"
      },
      "line_type": "header"
    },
    {
      "header": {
        "duration": "17:30-18:00",
        "type": "time_duration"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": {
                    "delimiter_type": "softer",
                    "span": {
                      "end": 422,
                      "start": 420
                    }
                  },
                  "type": "ca_delimiter"
                },
                {
                  "content": "softer",
                  "type": "text"
                },
                {
                  "content": {
                    "delimiter_type": "softer",
                    "span": {
                      "end": 430,
                      "start": 428
                    }
                  },
                  "type": "ca_delimiter"
                }
              ],
              "raw_text": "°softer°",
              "scoped_annotations": [
                {
                  "type": "partialretracing"
                }
              ],
              "span": {
                "end": 430,
                "start": 420
              },
              "type": "annotated_word"
            },
            {
              "content": [
                {
                  "content": "soft",
                  "type": "text"
                }
              ],
              "raw_text": "soft",
              "span": {
                "end": 439,
                "start": 435
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": {
                    "delimiter_type": "softer",
                    "span": {
                      "end": 450,
                      "start": 448
                    }
                  },
                  "type": "ca_delimiter"
                },
                {
                  "content": "softer",
                  "type": "text"
                },
                {
                  "content": "foo",
                  "type": "shortening"
                },
                {
                  "content": {
                    "delimiter_type": "softer",
                    "span": {
                      "end": 463,
                      "start": 461
                    }
                  },
                  "type": "ca_delimiter"
                }
              ],
              "raw_text": "°softer(foo)°",
              "scoped_annotations": [
                {
                  "type": "partialretracing"
                }
              ],
              "span": {
                "end": 463,
                "start": 448
              },
              "type": "annotated_word"
            },
            {
              "content": [
                {
                  "content": "soft",
                  "type": "text"
                }
              ],
              "raw_text": "soft",
              "span": {
                "end": 472,
                "start": 468
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "2;09.08",
        "corpus": "timmy",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI"
      },
      "name": "Timmy",
      "role": "Target_Child"
    },
    "GEM": {
      "birth_date": null,
      "code": "GEM",
      "id": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Speaker",
        "speaker": "GEM"
      },
      "name": "Gemma",
      "role": "Speaker"
    },
    "LIN": {
      "birth_date": null,
      "code": "LIN",
      "id": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Investigator",
        "speaker": "LIN"
      },
      "name": "Linda",
      "role": "Investigator"
    },
    "WIN": {
      "birth_date": null,
      "code": "WIN",
      "id": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Investigator",
        "speaker": "WIN"
      },
      "name": "Winnie",
      "role": "Investigator"
    }
  }
}
